# routes/application.js
@@ -3,8 +3,9 @@ const applicationController = require('../controllers/application');
 const { isAuthenticated } = require('../middleware/authenticate');
 
 router.get('/', isAuthenticated, applicationController.getApplications);
-router.get('/byjobId/:id', applicationController.getApplicationById);
-router.get('/filterbystatus/:status', applicationController.filterByStatus);
+router.get('/:id', isAuthenticated, applicationController.getApplicationById);
+router.get('/byjobId/:id', isAuthenticated, applicationController.getApplicationByJobId);
+router.get('/filterbystatus/:status', isAuthenticated, applicationController.filterByStatus);
 router.post('/', isAuthenticated, applicationController.createApplication);
 router.put('/:id', isAuthenticated, applicationController.updateApplication);
 router.delete('/:id', isAuthenticated, applicationController.deleteApplication);
